kubernetes/yamlfiles/ingress/production/ingress/host-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: host-ingress

spec:
  ingressClassName: nginx

  rules:
  - host: frontend.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend-service
            port:
              number: 80

  - host: backend.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: backend-service
            port:
              number: 80
